projects/vb6parse/snapshots/syntax/statements/system_interaction/stop/stop_at_module_level.snap
---
source: projects/vb6parse/src/syntax/statements/system_interaction/stop.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: StopStatement
      children:
        - kind: StopKeyword
          text: Stop
    - kind: Newline
      text: "\n"
