projects/vb6parse/snapshots/syntax/statements/system_interaction/stop/stop_in_for_each.snap
---
source: projects/vb6parse/src/syntax/statements/system_interaction/stop.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: ForEachStatement
      children:
        - kind: ForKeyword
          text: For
        - kind: Whitespace
          text: " "
        - kind: EachKeyword
          text: Each
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: item
        - kind: Whitespace
          text: " "
        - kind: InKeyword
          text: In
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: collection
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: MemberAccessExpression
                  children:
                    - kind: Identifier
                      text: item
                    - kind: PeriodOperator
                      text: "."
                    - kind: Identifier
                      text: IsInvalid
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: StopStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: StopKeyword
                          text: Stop
                    - kind: Newline
                      text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: IfKeyword
                  text: If
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: ProcessItem
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: item
                - kind: Newline
                  text: "\n"
        - kind: NextKeyword
          text: Next
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: item
        - kind: Newline
          text: "\n"
